<?xml version="1.0"?>
<package format="3">
  <name>silverhand_system_description</name>
  <version>0.1.0</version>
  <description>Combined Silverhand rover + arm description package for RViz visualization.</description>

  <maintainer email="team@silverhand.local">Silverhand Team</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>silverhand_arm_model</exec_depend>
  <exec_depend>silverhand_rover_model</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
